<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="K1y-zn-3fD">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Main View" id="BYZ-38-t0r" customClass="MainViewController" customModule="UIKitAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3S6-e7-Pth">
                                <rect key="frame" x="143" y="318.5" width="89" height="30"/>
                                <state key="normal" title="Show Details"/>
                                <connections>
                                    <segue destination="IyP-jf-2vR" kind="show" identifier="infoDetail" id="VBc-ZB-TTJ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The detail action has been performed 0 times" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fo-pa-6kA">
                                <rect key="frame" x="14" y="356" width="347" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="DetailActionCount"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="5fo-pa-6kA" firstAttribute="top" secondItem="3S6-e7-Pth" secondAttribute="bottom" constant="7.5" id="6Mb-Fa-fzG"/>
                            <constraint firstItem="3S6-e7-Pth" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HZH-C8-8rW"/>
                            <constraint firstItem="5fo-pa-6kA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-2" id="RkF-Z4-ZsL"/>
                            <constraint firstItem="3S6-e7-Pth" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kOJ-yM-fy9"/>
                            <constraint firstItem="3S6-e7-Pth" firstAttribute="centerX" secondItem="5fo-pa-6kA" secondAttribute="centerX" id="r5G-82-zIm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Main View" id="hcA-q3-wWU">
                        <barButtonItem key="rightBarButtonItem" title="Show Image" id="ifd-J1-Ph2">
                            <connections>
                                <segue destination="f1b-6P-f0F" kind="presentation" identifier="InfoSegue" id="KPS-xU-Rnh"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="LblCount" destination="5fo-pa-6kA" id="beD-ym-gz9"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <exit id="cP2-3w-K3c" userLabel="Exit" sceneMemberID="exit"/>
            </objects>
            <point key="canvasLocation" x="1420" y="115.59220389805098"/>
        </scene>
        <!--Modal View-->
        <scene sceneID="4ae-Co-f0u">
            <objects>
                <viewController title="Modal View" id="qqA-PG-Kgi" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="FfF-XT-nyR"/>
                        <viewControllerLayoutGuide type="bottom" id="7Ae-hM-V73"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="G0P-HL-1xo">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="s2l-5H-IMi">
                                <rect key="frame" x="20" y="76" width="335" height="551"/>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="s2l-5H-IMi" firstAttribute="top" secondItem="FfF-XT-nyR" secondAttribute="bottom" constant="20" id="122-h6-y2P"/>
                            <constraint firstItem="7Ae-hM-V73" firstAttribute="top" secondItem="s2l-5H-IMi" secondAttribute="bottom" constant="20" id="5kK-Ml-RNk"/>
                            <constraint firstItem="s2l-5H-IMi" firstAttribute="leading" secondItem="G0P-HL-1xo" secondAttribute="leading" constant="20" id="5np-s2-hqA"/>
                            <constraint firstAttribute="trailing" secondItem="s2l-5H-IMi" secondAttribute="trailing" constant="20" id="xco-4b-eHu"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Modal View" id="o9g-Bz-Fmu">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="y8B-d1-kHZ">
                            <connections>
                                <action selector="sendData:" destination="qqA-PG-Kgi" id="4bX-ew-R1k"/>
                                <segue destination="cP2-3w-K3c" kind="unwind" unwindAction="unwindToThisViewControllerWithSegue:" id="BCZ-ai-x7H"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2wa-SX-9AR" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3367.1999999999998" y="115.59220389805098"/>
        </scene>
        <!--Detail View-->
        <scene sceneID="ELC-3l-iTo">
            <objects>
                <viewController title="Detail View" id="IyP-jf-2vR" customClass="DetailViewController" customModule="UIKitAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="DHD-7L-vGT"/>
                        <viewControllerLayoutGuide type="bottom" id="wQ1-Ra-ddK"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="EaO-nn-9kq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Presented on ..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXI-Hq-7ts">
                                <rect key="frame" x="128" y="323.5" width="119.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiE-CT-o35">
                                <rect key="frame" x="136" y="352" width="103" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="wL9-8o-g2x"/>
                                </constraints>
                                <state key="normal" title="Perform Action"/>
                                <connections>
                                    <action selector="clickAction:" destination="IyP-jf-2vR" eventType="touchUpInside" id="4Hu-7I-Roj"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="oiE-CT-o35" firstAttribute="top" secondItem="hXI-Hq-7ts" secondAttribute="bottom" constant="8" id="4lR-ur-FM6"/>
                            <constraint firstItem="hXI-Hq-7ts" firstAttribute="centerX" secondItem="EaO-nn-9kq" secondAttribute="centerX" id="FTB-Em-6Oa"/>
                            <constraint firstItem="oiE-CT-o35" firstAttribute="centerX" secondItem="hXI-Hq-7ts" secondAttribute="centerX" id="Ll1-dQ-2yg"/>
                            <constraint firstItem="oiE-CT-o35" firstAttribute="top" secondItem="hXI-Hq-7ts" secondAttribute="bottom" constant="8" id="fFL-gT-u4s"/>
                            <constraint firstItem="hXI-Hq-7ts" firstAttribute="centerY" secondItem="EaO-nn-9kq" secondAttribute="centerY" id="rdt-6z-WcV"/>
                            <constraint firstItem="oiE-CT-o35" firstAttribute="leading" secondItem="EaO-nn-9kq" secondAttribute="leadingMargin" constant="120" id="uQc-eq-ZFm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detail View" id="2DF-aP-qsB"/>
                    <connections>
                        <outlet property="presentedLabel" destination="hXI-Hq-7ts" id="g8Q-al-aaw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cb4-uq-eug" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2428" y="872"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="HNX-zN-91Y">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="K1y-zn-3fD" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fBg-ez-uEZ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="7jz-rO-hns"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lUb-ZY-LqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="480.80000000000001" y="115.59220389805098"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="TEk-mT-K1v">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f1b-6P-f0F" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UlV-E5-bKv">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="qqA-PG-Kgi" kind="relationship" relationship="rootViewController" destinationCreationSelector="modelviewSegue" id="viV-oB-FAV"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="thU-Nn-8ef" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2428" y="115.59220389805098"/>
        </scene>
    </scenes>
    <resources>
        <image name="bg" width="540" height="960"/>
    </resources>
</document>
